v1.0
	-Myl
	
v1.1
	-Agregada la opción para enviar comentarios
	
v1.2
	-Se corrige el armado de los decks, manteniendo el estado actual cuando se presenta un error al guardar.
	-Se agrega la restricción para los formatos de deck