@@ -1,12 +1,12 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/myl?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
-
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3207/myl?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/myl?useUnicode=true&characterEncoding=utf-8
 #jdbc.username=root
-#jdbc.password=Theblisterexist1
+#jdbc.password=root
+
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3207/myl?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=Theblisterexist1
 
 
 initialPoolSize=5
